--- a/app/views/shared/_social_share.html.erb
+++ b/app/views/shared/_social_share.html.erb
@@ -1,6 +1,6 @@
 <div class="social-share drop-down-container">
 
-  <button type="button" class="social-share__trigger controls__btn btn js-drop-down-trigger" aria-haspopup="true" aria-owns="share-options">
+  <button type="button" class="social-share__trigger controls__btn btn js-drop-down-trigger" aria-haspopup="true" aria-controls="share-options">
     <span class="icon icon--share icon--lrg icon--spacing-lrg drop-down-container__non-active" aria-hidden="true"></span><!--
     --><span class="drop-down-container__non-active social-share__trigger__txt">Share</span><!--
     --><span class="icon icon--close-lrg icon--lrg icon--spacing-lrg drop-down-container__active" aria-hidden="true"></span><!--
