Don't let the filter buttons content overflow.

--- a/app/assets/stylesheets/partials/modules/_filters.scss
+++ b/app/assets/stylesheets/partials/modules/_filters.scss
@@ -50,6 +50,8 @@
   }
 }
 
+  .filters__trigger {overflow: hidden;}
+
   // Desktop edition of filters
   .non-palm .filters__target {
     position: absolute;
