--- a/app/views/layouts/_global_search.html.erb
+++ b/app/views/layouts/_global_search.html.erb
@@ -1,35 +1,41 @@
-<div class="container" ng-controller='GlobalSearchCtrl'>
-  <!-- Search form -->
-  <%= form_tag centre_products_path(centre_id: params[:centre_id] || params[:id]),
-      class: "search-mini", role: "search", method: :get do %>
-    <span class="icon icon--search" aria-hidden="true"></span>
-    <label for="global-search" class="hide-visually">Search site</label>
-    <input type="hidden" ng-model="centre" value="<%= params[:centre_id] || params[:id]%>">
-    <input type="search" class="search-mini__input" id="global-search"
-      ng-model='searchQuery'
-      name="search_query" autocomplete="off"
-      placeholder="Search stores, products, deals &amp; events&#8230;">
-    <input type='submit' value='Search Products' ng-hide='true'>
-  <% end %>
-  <!-- //Search form -->
+<div class="header__overlay header__overlay--toggle js-search-toggle" id="search-mini">
+  <div class="container" ng-controller='GlobalSearchCtrl'>
 
-  <!-- Close search -->
-  <button class="btn header__overlay__close-btn hide-fully--non-palm js-search-btn-toggle js-disabled-hide" type="button">
-    <span class="icon icon--close-lrg js-disabled-hide" aria-hidden="true"></span>
-    <span class="hide-visually"> Close search</span>
-  </button>
-  <!-- //Close search -->
-  <div class='global-search-results box' ng-show='suggestions.length > 0'>
-    <div class='island'>
-      <p>Are you looking for</p>
-      <div class='results__products'>
-        <ul>
-          <li ng-repeat="suggestion in suggestions">
-            <a href="<%= centre_products_path(params[:centre_id] || params[:id]) %>{{suggestion['queryString']}}" target="_self">{{suggestion['description']}}</a>
-          </li>
-        </ul>
+    <%# Search form %>
+    <%= form_tag centre_products_path(centre_id: params[:centre_id] || params[:id]),
+        class: "search-mini", role: "search", method: :get do %>
+      <span class="icon icon--search" aria-hidden="true"></span>
+      <label for="global-search" class="hide-visually">Search site</label>
+      <input type="hidden" ng-model="centre" value="<%= params[:centre_id] || params[:id]%>">
+      <input type="search" class="search-mini__input" id="global-search"
+        ng-model='searchQuery'
+        name="search_query" autocomplete="off"
+        placeholder="Search stores, products, deals &amp; events&#8230;">
+      <input type='submit' value='Search Products' ng-hide='true'>
+    <% end %>
+    <%# //Search form %>
+
+    <%# Close search %>
+    <button class="btn header__overlay__close-btn hide-fully--non-palm js-search-btn-toggle js-disabled-hide" type="button">
+      <span class="icon icon--close-lrg js-disabled-hide" aria-hidden="true"></span>
+      <span class="hide-visually"> Close search</span>
+    </button>
+    <%# //Close search %>
+
+    <%# Search results %>
+    <div class='global-search-results box' ng-show='suggestions.length > 0'>
+      <div class='island'>
+        <p>Are you looking for</p>
+        <div class='results__products'>
+          <ul>
+            <li ng-repeat="suggestion in suggestions">
+              <a href="<%= centre_products_path(params[:centre_id] || params[:id]) %>{{suggestion['queryString']}}" target="_self">{{suggestion['description']}}</a>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
+    <%# //Search results %>
+
   </div>
 </div>
-
