improves handling of optional store logos

--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -68,7 +68,7 @@
               <%# //Store name %>
 
               <%# Logo %>
-              <% if store.logo.present? %>
+              <% if store.has_logo? %>
                 <div class="stores-list__data-cell stores-list__data-cell--logo hide-fully--palm">
                   <div class="vert-align">
                     <div class="vert-align__inner">
