Replace hack with better fix. (Also, for IE)

--- a/app/assets/stylesheets/partials/modules/_filters.scss
+++ b/app/assets/stylesheets/partials/modules/_filters.scss
@@ -64,7 +64,10 @@
 
   .filters__list {
     @include respond-min($non-palm) {
-      > li { display: inline-block; }
+      > li {
+        display: inline-block;
+        vertical-align: middle;
+      }
     }
   }
 
