Removing indent when there is no store logo for Micello map popup

--- a/app/assets/stylesheets/partials/modules/widgets/_map-micello.scss
+++ b/app/assets/stylesheets/partials/modules/widgets/_map-micello.scss
@@ -84,6 +84,9 @@
           @include respond-range($non-palm, $ipad-portrait - 1) {
             .map-micello--static & {padding-left: 0;}
           }
+
+          /* Remove the indent when there is no logo */
+          .is-no-store-logo & {padding-left: 0;}
         }
 
           /* Logo */
