fixes alt text on store list page logo

--- a/app/views/shared/_micello_map_popup.html.erb
+++ b/app/views/shared/_micello_map_popup.html.erb
@@ -2,7 +2,7 @@
 <div class="map-micello__overlay islet">
   <div class="map-micello__overlay__retailer map-micello__mrg-base">
     <div class="map-micello__overlay__retailer__img">
-      <img src="#{store.logo}" alt="#{store.name} #{store.logo}" onerror="window.$ && $(this).parents('.map-micello__overlay.islet').addClass('is-no-store-logo').find('.map-micello__overlay__retailer__img').remove()">
+      <img src="#{store.logo}" alt="#{store.name} logo" onerror="window.$ && $(this).parents('.map-micello__overlay.islet').addClass('is-no-store-logo').find('.map-micello__overlay__retailer__img').remove()">
     </div>
     <div class="map-micello__overlay__retailer__body">
       <em class="map-micello__hdr txt-break-word">#{store.name}</em>
