--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -72,7 +72,7 @@
                 <div class="stores-list__data-cell stores-list__data-cell--logo hide-fully--palm">
                   <div class="vert-align">
                     <div class="vert-align__inner">
-                      <%= image_tag 'logo-tile.png', data: {image: store.logo(width: 168, height: 80)}, alt: "#{store.name} #{store.logo}", itemprop: "photo" %>
+                      <%= image_tag 'logo-tile.png', data: {image: store.logo(width: 168, height: 80)}, alt: "#{store.name} logo", itemprop: "photo" %>
                     </div>
                   </div>
                 </div>
