Enable angular-cloak

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -111,6 +111,7 @@ Global stylesheet
 @import "partials/abstractions/dropdown";
 @import "partials/abstractions/box";
 @import "partials/abstractions/toggle-content";
+@import "partials/abstractions/angular-cloak";
 
 /* Modules */
 @import "partials/modules/feedback";
