comments out hard coded store hours

--- a/app/views/shared/_micello_map_popup.html.erb
+++ b/app/views/shared/_micello_map_popup.html.erb
@@ -6,7 +6,9 @@
     </div>
     <div class="map-micello__overlay__retailer__body">
       <em class="map-micello__hdr txt-break-word">#{store.name}</em>
-      <p>Open till <time datetime="">5:30pm</time> tonight</p>
+      <%# // Store Hours FIXME: replace with dynamic data when available %>
+      <%# <p>Open till <time datetime="">5:30pm</time> tonight</p> %>
+      <%# // Store Hours End %>
     </div>
   </div>
   <a href="#{store.url}" class="btn btn--full btn--main"><span class="icon icon--store icon--lrg icon--spacing-lrg" aria-hidden="true"></span>Store details</a>
