--- a/app/assets/stylesheets/partials/modules/widgets/_flexslider.scss
+++ b/app/assets/stylesheets/partials/modules/widgets/_flexslider.scss
@@ -40,6 +40,9 @@
 				-webkit-backface-visibility: visible;
 			}
 
+			/* Contain controls version */
+			.flexslider--contain-controls & {z-index: 1;}
+
 			/* Print */
 			@media print {
 				float: none !important;
@@ -110,6 +113,7 @@
 	.flexslider--contain-controls & {
 		margin-top: 0;
 		position: absolute;
+		z-index: 2;
 		left: 50%;
 		@include to-rem(bottom, $spacing-quarter);
 		@include translate(-50%, 0);
@@ -176,6 +180,7 @@
 	/* Links */
 	.icon {
 		position: absolute;
+		z-index: 2;
 		top: 50%;
 		left: 0;
 		@include to-rem(padding, 6 8 6 0);
