--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -73,7 +73,10 @@
                 <div class="stores-list__data-cell stores-list__data-cell--logo hide-fully--palm">
                   <div class="vert-align">
                     <div class="vert-align__inner">
-                      <%= image_tag 'logo-tile.png', data: {image: store.logo(width: 168, height: 62)}, alt: "#{store.name} logo", itemprop: "photo" %>
+                      <span class="preloader preloader--light" data-image-src="<%= store.logo(width: 168, height: 62) %>" data-image-alt="<%= "#{store.name} logo" %>" data-image-itemprop="photo">
+                        <span class="preloader__spinner"></span>
+                        <em class="hide-visually">Loading, please wait&#8230;</em>
+                      </span>
                     </div>
                   </div>
                 </div>
@@ -172,5 +175,7 @@
         }, true);
       });
     }());
+
+    $('.js-stores-maps-toggle-listing-detail').deferImages({matchMedia: 'all and (min-width: 40.0625em)'});
   <% end %>
 <%- end -%>
