Title changed to "Available at" for cases when the product isn't actually available at the currently selected centre.

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -109,7 +109,7 @@
 <!-- Availability -->
 <div class="island detail-view__divider--top-non-palm">
   <%- if @centres.present? -%>
-    <h2 class="detail-view__hdr-sub detail-view__mrg-off hn">Also available at</h2>
+    <h2 class="detail-view__hdr-sub detail-view__mrg-off hn">Available at</h2>
     <ul class="detail-view__centres">
       <%- @centres.each do |centre| -%>
         <li>
